src/test/deca/context/valid/personal/assign_int2.deca
// Description:
//    Affectation d'un int
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025

{
    int a; //meme si sa suffit il faut tout verifié 
    a=1;
}
