src/test/deca/context/invalid/field_protected_2.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025

class A{   
    protected int x;

}
class B{

}
{
    B a = new B();
    a.x;
}